--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "version": 2,
   "builds": [
     { "src": "frontend/package.json", "use": "@vercel/next" },
-    { "src": "backend/*.js", "use": "@vercel/node" }
+    { "src": "backend/app.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/backend/app.py" }
   ]
 }
