--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
   "version": 2,
+  "buildCommand": "cd frontend && npm run build",
+  "outputDirectory": "frontend/.next",
   "builds": [
     { "src": "frontend/package.json", "use": "@vercel/next" },
     { "src": "backend/app.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/app.py" }
+    { "src": "/api/(.*)", "dest": "/backend/app.py" },
+    { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
 }
