--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,8 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/backend/app.py" },
     { "src": "/(.*)", "dest": "/frontend/$1" }
+  ],
+  "rewrites": [
+    { "source": "/details/:productId", "destination": "/details/[productId]" }
   ]
 }
